# gep-evolver

./: .gitignore  README.md  elegant_gep.py  evolve.py  fitness.py  glyph_gep.py  glyphs.py  karva.py  operators.py  pyproject.toml  run_aggressive.py  run_enhanced.py  run_glyphs.py  run_gui.sh  run_seeded.py  run_with_phi.py  verify_formula.py
gepevolver/: __init__.py  engine.py  glyphs.py  karva.py  multigene.py
github/pending/prompts/: gep-unification-prompt.md
gui/: app.py  formula_parser.py  web_app.py
tests/: test_gepevolver.py
