[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gepevolver"
version = "0.1.0"
description = "Gene Expression Programming engine for discovering elegant mathematical formulas"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nicholas David Brown", email = "worldbridgerstudios@gmail.com"}
]
keywords = [
    "genetic-programming",
    "gene-expression-programming",
    "GEP",
    "formula-discovery",
    "evolutionary-computation",
    "symbolic-regression",
    "mathematical-formulas"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/worldbridgerstudios/GEPEvolver"
Repository = "https://github.com/worldbridgerstudios/GEPEvolver"

[tool.setuptools.packages.find]
where = ["."]
include = ["gepevolver*"]
